# cuda-rpc

./: .gitignore  .gitmodules  AGENTS.md  Makefile.am  README.md  configure.ac  cuda.hpp  fractos-service-compute-cuda.pc.in  fractos-service-compute-gpu.pc.in
app-compute-cuda/: .gitignore  Makefile  README.md  data_process.ipynb  result.md  simple.cpp  simple_bench.cpp
app-compute-cuda-src/: exp-simple.yaml  generate.py  rules.mak  service-compute-cuda.mak
experiments/: rules.mak
experiments/mubench/: exp-simple.yaml  rules.mak
experiments/test/: exp.yaml  generate.py  rules.mak
m4/: ax_check_cuda.m4
mubench/: Makefile.am  empty_kernel.cu  kernel_launch.cu  memory_alloc.cpp  util-cmdline.hpp
mubench/experiments/: generate.py  rules.mak
src/include/: Makefile.am
src/include/fractos/service/compute/: cuda.hpp  cuda.inc.hpp  cuda_msg.hpp
src/server/: Makefile.am  common.cpp  common.hpp  context.cpp  context.hpp  cublas.cpp  cublas.hpp  cuda_host_cb_manager.cpp  cuda_host_cb_manager.hpp  device.cpp  device.hpp  event.cpp  event.hpp  function.cpp  function.hpp  kernel.cpp  kernel.hpp  library.cpp  library.hpp  main.cpp  memcpy_manager.cpp  memcpy_manager.hpp  memory.cpp  memory.hpp  module.cpp  module.hpp  service.cpp  service.hpp  srv_context.cpp  srv_context.hpp  srv_device.cpp  srv_device.hpp  srv_event.cpp  srv_event.hpp  srv_function.cpp  srv_function.hpp  srv_memory.cpp  srv_memory.hpp  srv_module.cpp  srv_module.hpp  (+6 more)
src/wrapper/: Makefile.am  common.cpp  common.hpp  context.cpp  cublas-manual.cpp  cublas-state.cpp  cublas-state.hpp  cuda-generate-funcs.sh  device.cpp  driver-context.cpp  driver-device.cpp  driver-error.cpp  driver-event.cpp  driver-execution.cpp  driver-initialization.cpp  driver-lib.cpp  driver-lib.hpp  driver-library.cpp  driver-memop.cpp  driver-memory.cpp  driver-module.cpp  driver-occupancy.cpp  driver-primary-context.cpp  driver-state.cpp  driver-state.hpp  driver-stream.cpp  driver-syms-extern.hpp  driver-syms.hpp  driver-version.cpp  image.cpp  image.hpp  initialization.cpp  lib.cpp  lib.hpp  module.cpp  runtime-device.cpp  runtime-entrypoint.cpp  runtime-error.cpp  runtime-event.cpp  runtime-execution.cpp  (+12 more)
test/: Makefile.am  module.cu  test-cublas-wrapper-full.cpp  test-cublas-wrapper-simple.cpp  test-memcpy-wrapper.cpp  test-memcpy.cpp  test-service-init.cpp  test-service-memory.cpp  test-stream.cpp
test/experiments/: generate.py  rules.mak
